tests/type-errors/no_builtin_for_subset.arl
archetype no_builtin_for_subset

variable res : int subset = []

action exec () {
  effect {
    res := [1; 2; 3]
  }
}
